2011-12-20	Stephan Linz <linz@li-pro.net>

	* common: remove patch sets for obsolete u-boot-2011.06
	* common: remove patch sets for obsolete u-boot-2011.03
	* common: remove patch sets for obsolete u-boot-2010.12-rc1
	* common: remove patch sets for obsolete u-boot-2010.06

2011-12-18	Stephan Linz <linz@li-pro.net>

	* common: adapt latest patch sets to linux-2.6.37.6
	* ptxconfig: include and enable new local source iwatcher-trunk
	* ptxconfig: include and enable new local source
		     gcc_extract_insn_test-trunk

2011-12-17	Stephan Linz <linz@li-pro.net>

	* common: remove patch sets for obsolete packages dbus-1.2.24,
		  glib-2.22.2, and glib-2.25.10

2011-12-11	Stephan Linz <linz@li-pro.net>

	* common: HOWTO: add reference note to the right GNU toolchain
	* ptxconfig: enable glibmm

2011-12-10	Stephan Linz <linz@li-pro.net>

	* common: remove dbus-glib-0.82 (from ptxdist-2010.08.0) and upgrade
		  to default version from global ptxdist rule set
	* common: remove dbus-1.2.24 (from ptxdist-2010.08.0) and upgrade
		  to default version from global ptxdist rule set
	* common: remove glib-2.22.1 (from ptxdist-2010.08.0) and upgrade
		  to default version from global ptxdist rule set

2011-12-04	Stephan Linz <linz@li-pro.net>

	* ptxconfig: migrate to ptxdist-2011.12.0
	* ptxconfig: upgarde to busybox-1.18.5
	* common: stay on dbus-glib-0.82 (from ptxdist-2010.08.0)
	* common: stay on dbus-1.2.24 (from ptxdist-2010.08.0)
	* common: stay on glib-2.22.1 (from ptxdist-2010.08.0)
	* common: remove rules for glibmm-2.22.1 (from ptxdist-2010.08.0)

2011-11-18	Stephan Linz <linz@li-pro.net>

	* common: upgarde patch sets to u-boot-2011.03
	* common: upgarde patch sets to u-boot-2011.06
	* common: upgarde patch sets to u-boot-2011.09

2011-11-16	Stephan Linz <linz@li-pro.net>

	* common: adapt latest patch sets to linux-2.6.37.4
	* common: HOWTO: add reference note ti the right GNU toolchain
	* ptxconfig: enable gdb-7.2 (native debugging)